[package]
name = "trfr"
version = "0.1.0"
edition = "2021"
authors = ["Max Brown <max.carter-brown@aru.ac.uk>"]
description = "Parse Tandem Repeat Finder .dat files"
license = "MIT"
keywords = ["parser", "tandem", "tfr", "repeat"]
categories = ["parser-implementations"]
homepage = "https://github.com/Euphrasiologist/trfr"
repository = "https://github.com/Euphrasiologist/trfr"
